tests/output/self_hosted/unterminated_string_error.txt
tests/unterminated_string_error.oomph:2: error: string does not terminate

    print("hello)
          ^^^^^^^

